<resources>
    <string name="app_name">LearningLanguages</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="email">*Email</string>
    <string name="password">*Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_learner_account">Create New Learner Account</string>
    <string name="create_new_tutor_account">Create New Tutor Account</string>
    <string name="name">*Name</string>
    <string name="confirm_password">*Confirm Password</string>
    <string name="settings">Settings</string>
    <string name="personal_information">Personal information</string>
    <string name="languages">Languages</string>
    <string name="means_of_communication">Means of communication</string>
    <string name="type_a_message">Type a message</string>
    <string name="select_country">Select Country</string>
    <string name="search">Search...</string>
    <string name="tutors">Tutors</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="book_lesson">Book Lesson</string>
    <string name="education_level">Education level</string>
    <string name="work_experience">Work Experience</string>
    <string name="about_yourself">About Yourself</string>
    <string name="chat">Chat</string>
    <string name="purpose_of_study">Purpose of study</string>
    <string name="choose_new_tutor">Choose New Tutor</string>
    <string name="add_photo">Add photo</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="country">Country</string>
    <string name="tell_about_yourself">Tell about yourself</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create New Account</string>
    <string name="choose_your_role">Choose Your Role</string>
    <string name="tutor">Tutor</string>
    <string name="learner">Learner</string>
    <string name="select_language">Select Language</string>
    <string name="choose_language_to_teach">Choose language to teach</string>
    <string name="choose_language_to_learn">Choose language to learn</string>
    <string name="choose_new_language">Choose new language</string>
    <string name="save">Save</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="edit_photo">Edit photo</string>
    <string name="how_edit_photo">What do you want to do?</string>
    <string name="delete_photo">Delete photo</string>
    <string name="cancel">Cancel</string>
    <string name="level_of_knowledge">Choose your level of knowledge</string>
    <string name="update">Data saved successfully</string>
    <string name="deleted">Deleted</string>
    <string name="stop_delete">At least one language must be selected</string>
    <string name="sign_out">Signing out...</string>
    <string name="years_old">years old</string>
    <string name="selected_languages">Selected languages</string>
    <string name="add_language">Add language</string>
    <string name="language">Language</string>
    <string name="level">Level</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="no_such_tutors">No such tutors</string>
    <string name="no_such_tutor">No such tutor</string>
    <string name="no_such_learner">No such learner</string>
    <string name="reset_all_filters">Reset all filters</string>
    <string name="checking_email">Check your email to verify your email address</string>
    <string name="sending_email_failed">Sending email failed</string>
    <string name="sign_in_failed">Register, verify your email and enter correct data</string>
    <string name="no_chats_available">No chats available</string>
    <string name="write_your_message">Write your message</string>
    <string name="language_repetition">This language has already been added, you can change its level of knowledge</string>
</resources>