<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TutorProfileActivity">

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="@dimen/_23sdp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:gravity="bottom"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/buttonSignOut"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_logout"
        android:tint="#808080"
        android:layout_gravity="bottom"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile"
        app:layout_constraintBottom_toBottomOf="@id/profile"/>
    <View
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_16sdp"
        android:background="@drawable/separator_top"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/buttonSignOut">
    </View>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/topPanel"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/ic_account"
        android:scaleType="centerCrop"
        app:riv_oval="true"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="Name"
        android:textSize="@dimen/_18sdp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_gravity="center">
    </TextView>
    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Age"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/primary"
        android:visibility="gone"
        android:layout_gravity="center">
    </TextView>
    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Country"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/primary"
        android:visibility="gone"
        android:layout_gravity="center">
    </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_5sdp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/messageBtn"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/message"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/primary"
                    app:cornerRadius="@dimen/_8sdp"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/_18sdp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bookLessonBtn"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/book_lesson"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/primary"
                    app:cornerRadius="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_gravity="start"/>
            </LinearLayout>
    <TextView
        android:id="@+id/languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"
        android:paddingStart="@dimen/_16sdp"
        android:textColor="@color/primary"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/profile_textview"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/languagesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:clipToPadding="false"
        android:paddingTop="@dimen/_5sdp"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/education_level"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"
        android:paddingStart="@dimen/_16sdp"
        android:textColor="@color/primary"
        android:background="@drawable/profile_textview"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/educationEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Education"
        android:textSize="@dimen/_14sdp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/primary"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/workExperience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_experience"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"
        android:paddingStart="@dimen/_16sdp"
        android:textColor="@color/primary"
        android:background="@drawable/profile_textview"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/workExperienceEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Work Experience"
        android:textSize="@dimen/_14sdp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/primary"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/aboutYourself"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_yourself"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"
        android:paddingStart="@dimen/_16sdp"
        android:textColor="@color/primary"
        android:background="@drawable/profile_textview"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/aboutYourselfEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="About Yourself"
        android:textSize="@dimen/_14sdp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/primary"
        android:visibility="gone"
        android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>